@@ -38,6 +38,9 @@ void printThreadListInfo(const char *);
 void printProcessCount(const char *);
 void printProcessCountInfo(const char *);
 
+void printProcSpawn(const char *);
+void printProcSpawnInfo(const char *);
+
 void printLastPID(const char *);
 void printLastPIDInfo(const char *);
 
